Fixed SonarLint and Minor changes